--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 destination: _site
-permalink: /:year/:month/:day/:title
+permalink: /blog/:year/:month/:day/:title
 markdown: rdiscount
 pygments: true
 
